--- a/TrackMyMacros.Api/TrackMyMacros.Api.csproj
+++ b/TrackMyMacros.Api/TrackMyMacros.Api.csproj
@@ -19,7 +19,9 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
       <PackageReference Include="Npgsql" Version="8.0.0-preview.4" />
+      <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
       <PackageReference Include="Serilog" Version="3.0.1" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
