--- a/TrackMyMacros.Application/TrackMyMacros.Application.csproj
+++ b/TrackMyMacros.Application/TrackMyMacros.Application.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="FluentValidation" Version="11.7.1" />
       <PackageReference Include="MediatR" Version="12.1.1" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
       <PackageReference Include="Npgsql" Version="8.0.0-preview.4" />
         <PackageReference Include="Dapper" Version="2.0.151" />
     </ItemGroup>
