added meal template functionality and docker support

--- a/TrackMyMacros.Api/appsettings.json
+++ b/TrackMyMacros.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MacrosConnectionString": "Host=localhost;Port=5432;Username=doc-is4-admin;Password=kl0tkl0t;Database=macros;",
+    "MacrosConnectionString": "Host=db;Port=5432;Username=postgres;Password=postgres;Database=postgres;"
   },
   "Serilog": {
     "MinimumLevel": {
