--- a/TrackMyMacros.App2/TrackMyMacros.App2.csproj
+++ b/TrackMyMacros.App2/TrackMyMacros.App2.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -36,10 +37,24 @@
 
     <ItemGroup>
       <Content Remove="Components\FoodItemComponent.razor" />
+      <Content Remove="Pages\Day.razor" />
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+      <Content Update="wwwroot\appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Update="wwwroot\appsettings.Development.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Update="wwwroot\appsettings.Production.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
       <Compile Remove="Components\FoodItemComponent.razor.cs" />
+      <Compile Remove="Pages\Day.razor.cs" />
     </ItemGroup>
 
 
