--- a/TrackMyMacros.Api/appsettings.Development.json
+++ b/TrackMyMacros.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+        "MacrosConnectionString": "Host=localhost;Port=5432;Username=doc-is4-admin;Password=kl0tkl0t;Database=macros;",
+
+  },
 }
