--- a/TrackMyMacros.App2/Properties/launchSettings.json
+++ b/TrackMyMacros.App2/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:7063;http://localhost:5149",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Test"
+//        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
