Move remaning macros completed

--- a/TrackMyMacros.Api/appsettings.Development.json
+++ b/TrackMyMacros.Api/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-        "MacrosConnectionString": "Host=localhost;Port=5432;Username=doc-is4-admin;Password=kl0tkl0t;Database=macros;",
+        "MacrosConnectionString": "Host=localhost;Port=5432;Username=doc-is6-admin;Password=Pa$$w0rd;Database=macros;"
+//    "MacrosConnectionString": "Host=db;Port=5432;Username=postgres;Password=postgres;Database=postgres;"
 
   },
 }
