--- a/TrackMyMacros.Api/Properties/launchSettings.json
+++ b/TrackMyMacros.Api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "TrackMyMacros.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7115;http://localhost:5044",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
