--- a/TrackMyMacros.Api/TrackMyMacros.Api.csproj
+++ b/TrackMyMacros.Api/TrackMyMacros.Api.csproj
@@ -23,6 +23,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
       <PackageReference Include="Npgsql" Version="8.0.0-preview.4" />
+      <PackageReference Include="Radzen.Blazor" Version="4.15.7" />
       <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
       <PackageReference Include="Serilog" Version="3.0.1" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
