--- a/TrackMyMacros.App2/wwwroot/appsettings.Production.json
+++ b/TrackMyMacros.App2/wwwroot/appsettings.Production.json
@@ -6,5 +6,6 @@
             "Microsoft": "Information"
         }
     },
+//    "BackendUrl": "http://localhost:7115"
     "BackendUrl": "http://207.154.221.166:7115"
 }
