--- a/TrackMyMacros.Domain/TrackMyMacros.Domain.csproj
+++ b/TrackMyMacros.Domain/TrackMyMacros.Domain.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TrackMyMacros.Attributes\TrackMyMacros.Attributes.csproj" />
+    </ItemGroup>
+
 </Project>
