--- a/composedh.yaml
+++ b/composedh.yaml
@@ -20,6 +20,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Test
   api:
     image: omarraman/macrotracker:api
+    pull_policy: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Test
     ports:
@@ -34,7 +35,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
-      - '5432:5432'
+      - '5433:5432'
     volumes:
       - db:/var/lib/postgresql/data
     healthcheck:
