--- a/TrackMyMacros.Application/TrackMyMacros.Application.csproj
+++ b/TrackMyMacros.Application/TrackMyMacros.Application.csproj
@@ -30,6 +30,10 @@
 
     <ItemGroup>
       <Folder Include="Aggregates" />
+      <Folder Include="Features\FoodCombo\Commands\GetList\" />
+      <Folder Include="Features\FoodCombo\Commands\Get\" />
+      <Folder Include="Features\FoodCombo\Queries\GetList\" />
+      <Folder Include="Features\FoodCombo\Queries\Get\" />
     </ItemGroup>
 
     <ItemGroup>
