Add create weight reading functionality

--- a/TrackMyMacros.App4/TrackMyMacros.App4.csproj
+++ b/TrackMyMacros.App4/TrackMyMacros.App4.csproj
@@ -63,6 +63,7 @@
     <ItemGroup>
       <Compile Remove="Services\WeightReadingDataService.cs" />
       <Compile Remove="Components\AddOrUpdateWeightReadingDialog.cs" />
+      <Compile Remove="GenericDataService.cs" />
     </ItemGroup>
 
 
