Added AddEntityUiPageGenerator.cs and ViewModelClassGenerator.cs

--- a/TrackMyMacros.App4/TrackMyMacros.App4.csproj
+++ b/TrackMyMacros.App4/TrackMyMacros.App4.csproj
@@ -64,6 +64,13 @@
       <Compile Remove="Services\WeightReadingDataService.cs" />
       <Compile Remove="Components\AddOrUpdateWeightReadingDialog.cs" />
       <Compile Remove="GenericDataService.cs" />
+      <Compile Remove="Pages\CreateWeightReading.cs" />
+      <Compile Remove="Pages\CreateWeightReading.razor.cs" />
+      <Compile Remove="Pages\CreateWeightReadingrazor.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ViewModels\WeightReading\" />
     </ItemGroup>
 
 
