--- a/TrackMyMacros.App4/TrackMyMacros.App4.csproj
+++ b/TrackMyMacros.App4/TrackMyMacros.App4.csproj
@@ -63,13 +63,14 @@
     <ItemGroup>
       <Compile Remove="Services\WeightReadingDataService.cs" />
       <Compile Remove="Components\AddOrUpdateWeightReadingDialog.cs" />
-      <Compile Remove="GenericDataService.cs" />
       <Compile Remove="Pages\CreateWeightReading.cs" />
       <Compile Remove="Pages\CreateWeightReading.razor.cs" />
       <Compile Remove="Pages\CreateWeightReadingrazor.cs" />
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="ViewModelsRecipe\" />
+      <Folder Include="ViewModelsWeightReading\" />
       <Folder Include="ViewModels\WeightReading\" />
     </ItemGroup>
 
