--- a/TrackMyMacros.Application/TrackMyMacros.Application.csproj
+++ b/TrackMyMacros.Application/TrackMyMacros.Application.csproj
@@ -48,6 +48,7 @@
       <Folder Include="Features\FoodCombo\Commands\Get\" />
       <Folder Include="Features\FoodCombo\Queries\GetList\" />
       <Folder Include="Features\FoodCombo\Queries\Get\" />
+      <Folder Include="Profiles\Recipe\" />
     </ItemGroup>
 
     <ItemGroup>
