--- a/TrackMyMacros.Persistance/TrackMyMacros.Persistance.csproj
+++ b/TrackMyMacros.Persistance/TrackMyMacros.Persistance.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <Compile Remove="Repositories\MesoCycleRepository.cs" />
       <Compile Remove="Repositories\BodyPartRepository.cs" />
+      <Compile Include="Repositories\MesocycleRepository.cs" />
     </ItemGroup>
 
 </Project>
