update generator for child value objects Get mesocycle implemented

--- a/TrackMyMacros.Api/TrackMyMacros.Api.csproj
+++ b/TrackMyMacros.Api/TrackMyMacros.Api.csproj
@@ -58,6 +58,7 @@
     <ItemGroup>
       <Compile Remove="Controllers\MesoCycleController.cs" />
       <Compile Remove="Controllers\BodyPartController.cs" />
+      <Compile Include="Controllers\MesocycleController.cs" />
     </ItemGroup>
 
 </Project>
