--- a/TrackMyMacros.Domain/TrackMyMacros.Domain.csproj
+++ b/TrackMyMacros.Domain/TrackMyMacros.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
+      <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
