--- a/TrackMyMacros.Domain/TrackMyMacros.Domain.csproj
+++ b/TrackMyMacros.Domain/TrackMyMacros.Domain.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TrackMyMacros.Attributes\TrackMyMacros.Attributes.csproj" />
+      <ProjectReference Include="..\TrackMyMacros.Infrastructure\TrackMyMacros.Infrastructure.csproj" />
       <ProjectReference Include="..\TrackMyMacros.SharedKernel\TrackMyMacros.SharedKernel.csproj" />
     </ItemGroup>
 
