added priority and index to set

--- a/TrackMyMacros.Dtos/TrackMyMacros.Dtos.csproj
+++ b/TrackMyMacros.Dtos/TrackMyMacros.Dtos.csproj
@@ -9,8 +9,11 @@
 
     <ItemGroup>
       <Folder Include="MesocycleWeekDay\" />
-      <Folder Include="MesocycleWeek\" />
       <Folder Include="Mesocycle\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TrackMyMacros.Domain\TrackMyMacros.Domain.csproj" />
     </ItemGroup>
 
 </Project>
