add models for set group get

--- a/TrackMyMacros.App4/TrackMyMacros.App4.csproj
+++ b/TrackMyMacros.App4/TrackMyMacros.App4.csproj
@@ -60,6 +60,7 @@
       <Content Update="wwwroot\appsettings.Production.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Content Remove="Components\Component.razor" />
     </ItemGroup>
 
     <ItemGroup>
