finally got set group functionaly worknig

--- a/TrackMyMacros.Api/appsettings.Development.json
+++ b/TrackMyMacros.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-//    "MacrosConnectionString": "Host=localhost;Port=5432;Username=admin;Password=admin;Database=macros;Include Error Detail=true;"
-    "MacrosConnectionString": "Host=localhost;Port=5432;Username=doc-is6-admin;Password=Pa$$w0rd;Database=macros;Include Error Detail=true;"
+    "MacrosConnectionString": "Host=localhost;Port=5432;Username=macros;Password=macros;Database=macros;Include Error Detail=true;"
+
   }
 }
