--- a/TrackMyMacros.Api/appsettings.json
+++ b/TrackMyMacros.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MacrosConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=macros;Include Error Detail=true;"
+    "MacrosConnectionString": "Host=localhost;Port=5432;Username=macros;Password=macros;Database=macros;Include Error Detail=true;"
+    //"MacrosConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=macros;Include Error Detail=true;"
 //    "MacrosConnectionString": "Host=localhost;Port=5432;Username=doc-is4-admin;Password=kl0tkl0t;Database=macros;"
   },
   "Serilog": {
