Correct target label Dont seed data automatically Dont migrate by def Checkbox in SetComponent.razor Workout title

--- a/TrackMyMacros.Api/appsettings.Development.json
+++ b/TrackMyMacros.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MacrosConnectionString": "Host=localhost;Port=5432;Username=macros;Password=macros;Database=macros;Include Error Detail=true;"
+    "MacrosConnectionString": "Host=localhost;Port=5436;Username=postgres;Password=postgres;Database=postgres;Include Error Detail=true;"
 
   }
 }
